JSAI/error/src/test/resources/base/loops_a001.js
/* DO WHILE */
var x = 10;

do {
  print("loop")
  print(x)
  x = x - 1;
} while (x > 5);

print(x)
x; // must be 5

